# remote_device_visualizaition_console

./: CMakeLists.txt  PROJECT_HANDOFF.md  README.md
apps/loadgen/: main.cpp
apps/server/: main.cpp  mqtt_bridge.cpp  mqtt_bridge.hpp
apps/simulator/: main.cpp
apps/viewer/: device_viewport_widget.cpp  device_viewport_widget.hpp  fleet_map_widget.cpp  fleet_map_widget.hpp  main.cpp  metrics_chart_widget.cpp  metrics_chart_widget.hpp  network_worker.cpp  network_worker.hpp
libs/common/: CMakeLists.txt
libs/common/include/rdvc/common/: device_status_store.hpp
libs/common/src/: device_status_store.cpp
libs/net/: CMakeLists.txt
libs/protocol/: CMakeLists.txt
libs/protocol/include/rdvc/protocol/: device_status.hpp  server_metrics.hpp  status_parser.hpp
libs/protocol/src/: server_metrics.cpp  status_parser.cpp
src/: main.cpp
